--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>cat</title>
-        <link rel="icon" type="image/x-icon" href="./cat.jpeg">
+        <link rel="icon" type="image/x-icon" href="./cat.ico">
         <style>
             div.container{
                 position:relative;
